Typo fix in man pages

--- a/noipv4.1
+++ b/noipv4.1
@@ -11,7 +11,7 @@ noipv4 \- run a program with IPv4 address suppressed
 runs a program with any IPv4 responses to
 .BR getaddrinfo (3)
 calls suppressed.
-The effect is that (subject to the caveats below) it will always IPv6
+The effect is that (subject to the caveats below) it will always use IPv6
 connectivity instead of IPv4 connectivity.
 .SH OPTIONS
 .TP
