--- a/noipv6.1
+++ b/noipv6.1
@@ -11,7 +11,7 @@ noipv6 \- run a program with IPv6 address suppressed
 runs a program with any IPv6 responses to
 .BR getaddrinfo (3)
 calls suppressed.
-The effect is that (subject to the caveats below) it will always IPv4
+The effect is that (subject to the caveats below) it will always use IPv4
 connectivity instead of IPv6 connectivity.
 .SH OPTIONS
 .TP
