--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Gaise
 Licence
 =======
 
-  Copyright © 2011 Richard Kettlewell
+  Copyright © 2011, 2014, 2015 Richard Kettlewell
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
